Fix logo alignment

--- a/css/skin.css
+++ b/css/skin.css
@@ -508,7 +508,7 @@ textarea::-webkit-input-placeholder {
 -------------------------------------------------------------- */
 .sidebar_outer_logo .logo_main,
 .top_panel_wrap .logo_main{
-  height:30px;
+  height:55px;
 }
 
 .top_panel_wrap_inner {
